--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.7.4",
+    "@firebase/firestore": "^3.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
+    "ckeditor4-react": "^2.0.1",
+    "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-tinymce": "^0.7.0",
+    "react-whatsapp": "^0.2.1",
+    "web-vitals": "^1.1.2",
+    "ytdl-core": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
