--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "ckeditor4-react": "^2.0.1",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
     "react-tinymce": "^0.7.0",
